policies/standard/storageclass_constraint/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sstorageclassconstraintpolicy
  annotations:
    description: >-
      Only predefined storage classes can be used
spec:
  crd:
    spec:
      names:
        kind: K8sStorageclassConstraintPolicy
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            storageclasses:
              description: "An allowed-list of storageclasses"
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sstorageclassconstraintpolicy

        violation[{"msg": msg}] {
          scn := input_storageclasname[_]
          not input_allowed_storageclassname(scn)
          msg := sprintf("Storage Class Name %v is not allowed, Allowed values: %v", [scn, input.parameters.storageclasses])
        }
        
        input_storageclasname[s] {
          input.review.object.kind == "PersistentVolumeClaim"
          s := input.review.object.spec.storageClassName
        }

        input_storageclasname[s] {
          input.review.object.kind == "StatefulSet"
          s := input.review.object.spec.volumeClaimTemplates[_].spec.storageClassName
        }

        input_allowed_storageclassname(scn){
        	input.parameters.storageclasses[_] == scn
        }
